Removed all http.

--- a/src/app/pages/dashboard/rooms/room-selector/room-selector.component.html
+++ b/src/app/pages/dashboard/rooms/room-selector/room-selector.component.html
@@ -1,6 +1,6 @@
 <div class="header">Room Management</div>
 <div class="room-selector">
-  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+  <svg xmlns="//www.w3.org/2000/svg" xmlns:xlink="//www.w3.org/1999/xlink"
        [attr.viewBox]="viewBox" preserveAspectRatio="xMidYMid">
     <defs>
 
