--- a/src/app/pages/ui-features/icons/icons.component.html
+++ b/src/app/pages/ui-features/icons/icons.component.html
@@ -20,7 +20,7 @@
         <div class="icon" *ngFor="let icon of icons.fontAwesome"><i class="fa {{ icon }}"></i></div>
       </nb-card-body>
       <nb-card-footer>
-        <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">
+        <a href="//fortawesome.github.io/Font-Awesome/icons/" target="_blank">
           See all Font Awesome icons
         </a>
       </nb-card-footer>
@@ -36,7 +36,7 @@
         <div class="icon" *ngFor="let icon of icons.ionicons"><i class="{{ icon }}"></i></div>
       </nb-card-body>
       <nb-card-footer>
-        <a href="http://ionicons.com/" target="_blank">See all ionicons icons</a>
+        <a href="//ionicons.com/" target="_blank">See all ionicons icons</a>
       </nb-card-footer>
     </nb-card>
   </div>
