--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -3,7 +3,7 @@
      [class.right]="position === 'inverse'">
   <div class="logo-containter">
     <a (click)="toggleSidebar()" href="#" class="navigation"><i class="nb-menu"></i></a>
-    <div class="logo" (click)="goToHome()">ngx-<span>admin</span></div>
+    <div class="logo" (click)="goToHome()">FreeStock<span>.market</span></div>
   </div>
   <ngx-theme-switcher></ngx-theme-switcher>
 </div>
@@ -14,12 +14,12 @@
   [class.right]="position === 'normal'"
   [class.left]="position === 'inverse'">
   <nb-action icon="nb-grid-b" class="toggle-layout" (click)="toggleSettings()"></nb-action>
-  <nb-action >
-    <nb-user [menu]="userMenu" [name]="user?.name" [picture]="user?.picture"></nb-user>
+  <nb-action *ngIf="username">
+    <nb-user [menu]="userMenu" [name]="username" [picture]="profilePicture" (click)="logout()"></nb-user>
   </nb-action>
+  <nb-action class="control-item" icon="nb-person" *ngIf="!username" (click)="login()"></nb-action>
   <nb-action class="control-item" disabled icon="nb-notifications" (click)="getPortfolio()"></nb-action>
-  <nb-action class="control-item" icon="nb-person" (click)="tryLogin()"></nb-action>
-  <nb-action class="control-item">
+   <nb-action class="control-item">
     <nb-search type="rotate-layout" (click)="startSearch()"></nb-search>
   </nb-action>
 </nb-actions>
