--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -18,7 +18,7 @@
     <nb-user [menu]="userMenu" [name]="username" [picture]="profilePicture" (click)="logout()"></nb-user>
   </nb-action>
   <nb-action class="control-item" icon="nb-person" *ngIf="!username" (click)="login()"></nb-action>
-  <nb-action class="control-item" disabled icon="nb-notifications" (click)="getPortfolio()"></nb-action>
+  <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
    <nb-action class="control-item">
     <nb-search type="rotate-layout" (click)="startSearch()"></nb-search>
   </nb-action>
