--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,25 +1,21 @@
 <div class="row">
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Light" type="primary">
-      <i class="nb-lightbulb"></i>
+    <ngx-status-card title="Alfred" type="primary" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_036_-_Bot-64.png">
     </ngx-status-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Roller Shades" type="success">
-      <i class="nb-roller-shades"></i>
+    <ngx-status-card title="Geoffrey" type="success" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_010_-_Bot-64.png">
     </ngx-status-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Wireless Audio" type="info">
-      <i class="nb-audio"></i>
+    <ngx-status-card title="Wireless Audio" type="info" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_026_-_Bot-64.png">
     </ngx-status-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Coffee Maker" type="warning">
-      <i class="nb-coffee-maker"></i>
+    <ngx-status-card title="Rocket" type="warning" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_018_-_Bot-64.png">
     </ngx-status-card>
   </div>
 </div>
