--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,12 +5,12 @@
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Geoffrey" type="success" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_010_-_Bot-64.png">
+    <ngx-status-card title="Dot" type="success" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_010_-_Bot-64.png">
     </ngx-status-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Wireless Audio" type="info" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_026_-_Bot-64.png">
+    <ngx-status-card title="Geoffrey" type="info" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_026_-_Bot-64.png">
     </ngx-status-card>
   </div>
 
