--- a/src/app/pages/bots/overview/overview.component.html
+++ b/src/app/pages/bots/overview/overview.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-bot-profile
-      title="Alfred"
+      title="Bruno"
       subtitle="Strategy"
       type="primary"
-      pictureUrl="https://cdn3.iconfinder.com/data/icons/robots-flat-collection/60/Robots_-_Flat_-_036_-_Bot-256.png"
+      pictureUrl="../../../../assets/images/bruno-flat.svg"
       description="Buys stocks when they go on sale."
-      [routerLink]="['../alfred']"
+      [routerLink]="['../bruno']"
     ></ngx-bot-profile>
   </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
@@ -14,8 +14,8 @@
       title="Geoffrey"
       subtitle="Safety"
       type="info"
-      pictureUrl="https://cdn3.iconfinder.com/data/icons/robots-flat-collection/60/Robots_-_Flat_-_030_-_Bot-256.png"
-      description="Prevents investments from losing too much."
+      pictureUrl="../../../../assets/images/geoffrey-flat.svg"
+      description="Prevents investments from losing."
       [routerLink]="['../geoffrey']"
     ></ngx-bot-profile>
   </div>
@@ -24,7 +24,7 @@
     title="Dot"
     subtitle="Profit"
     type="success"
-    pictureUrl="https://cdn3.iconfinder.com/data/icons/robots-flat-collection/60/Robots_-_Flat_-_010_-_Bot-256.png"
+    pictureUrl="../../../../assets/images/dot-flat.svg"
     description="Sells stocks at their peak."
     [routerLink]="['../dot']"
   ></ngx-bot-profile>
@@ -34,7 +34,7 @@
       title="Rocket"
       subtitle="Growth"
       type="warning"
-      pictureUrl="https://cdn3.iconfinder.com/data/icons/robots-flat-collection/60/Robots_-_Flat_-_018_-_Bot-256.png"
+      pictureUrl="../../../../assets/images/rocket-flat.svg"
       description="Identifies the rocket stocks."
       [routerLink]="['../rocket']"
     ></ngx-bot-profile>
