--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,24 +1,45 @@
 <div class="row">
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Alfred" type="primary" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_036_-_Bot-64.png">
+    <ngx-status-card title="Bruno" type="primary" pictureUrl="../../../../assets/images/bruno-outline.svg">
     </ngx-status-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Dot" type="success" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_010_-_Bot-64.png">
+    <ngx-status-card title="Geoffrey" type="info" pictureUrl="../../../../assets/images/geoffrey-outline.svg">
     </ngx-status-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Geoffrey" type="info" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_026_-_Bot-64.png">
+    <ngx-status-card title="Dot" type="success" pictureUrl="../../../../assets/images/dot-outline.svg">
     </ngx-status-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Rocket" type="warning" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-collection/60/Robots_-_Outline_-_018_-_Bot-64.png">
+    <ngx-status-card title="Rocket" type="warning" pictureUrl="../../../../assets/images/rocket-outline.svg">
     </ngx-status-card>
   </div>
 </div>
+<!--<div class="row">-->
+  <!--<div class="col-xxxl-3 col-md-6">-->
+    <!--<ngx-status-card title="Bruno" type="primary" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-solid-collection/60/Robots_-_Solid_-_036_-_Bot-64.png">-->
+    <!--</ngx-status-card>-->
+  <!--</div>-->
+
+  <!--<div class="col-xxxl-3 col-md-6">-->
+    <!--<ngx-status-card title="Geoffrey" type="info" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-solid-collection/60/Robots_-_Solid_-_026_-_Bot-64.png">-->
+    <!--</ngx-status-card>-->
+  <!--</div>-->
+
+  <!--<div class="col-xxxl-3 col-md-6">-->
+    <!--<ngx-status-card title="Dot" type="success" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-solid-collection/60/Robots_-_Solid_-_010_-_Bot-64.png">-->
+    <!--</ngx-status-card>-->
+  <!--</div>-->
+
+  <!--<div class="col-xxxl-3 col-md-6">-->
+    <!--<ngx-status-card title="Rocket" type="warning" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-solid-collection/60/Robots_-_Solid_-_018_-_Bot-64.png">-->
+    <!--</ngx-status-card>-->
+  <!--</div>-->
+<!--</div>-->
 
 <div class="row">
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
