Show login on xs.

--- a/src/app/@theme/components/theme-switcher/theme-switcher.component.scss
+++ b/src/app/@theme/components/theme-switcher/theme-switcher.component.scss
@@ -96,6 +96,8 @@
   }
 
   @include media-breakpoint-down(xs) {
-      align-items: flex-end;
+      //align-items: flex-end;
+
+      display: none;
   }
 }
