--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -21,7 +21,7 @@
     <nb-user [name]="'Login'" [picture]="'https://cdn2.iconfinder.com/data/icons/rcons-user/32/male-circle-512.png'" (click)="login()"></nb-user>
     <!--<nb-user [name]="'Login'" [picture]="'https://cdn3.iconfinder.com/data/icons/robots-flat-collection/60/Robots_-_Flat_-_007_-_Robocop-48.png'" (click)="login()"></nb-user>-->
   </nb-action>
-  <nb-action class="control-item" icon="nb-person" *ngIf="!username" (click)="login()">login</nb-action>login
+  <!--<nb-action class="control-item" icon="nb-person" *ngIf="!username" (click)="login()">login</nb-action>login-->
   <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
    <nb-action class="control-item">
     <nb-search type="rotate-layout" (click)="startSearch()"></nb-search>
