--- a/src/app/@theme/components/header/header.component.scss
+++ b/src/app/@theme/components/header/header.component.scss
@@ -107,9 +107,9 @@
   }
 
   @include media-breakpoint-down(xs) {
-    .right /deep/ {
-      display: none;
-    }
+    //.right /deep/ {
+    //  display: none;
+    //}
   }
 }
 
