Add investments table.

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Bruno" type="primary" pictureUrl="../../../../assets/images/bruno-outline.svg">
+    <ngx-status-card title="Bruno" type="primary" on=on pictureUrl="../../../../assets/images/bruno-outline.svg">
     </ngx-status-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Geoffrey" type="info" pictureUrl="../../../../assets/images/geoffrey-outline.svg">
+    <ngx-status-card title="Geoffrey" type="info" on=on pictureUrl="../../../../assets/images/geoffrey-outline.svg">
     </ngx-status-card>
   </div>
 
@@ -15,63 +15,45 @@
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Rocket" type="warning" pictureUrl="../../../../assets/images/rocket-outline.svg">
+    <ngx-status-card title="Rocket" type="warning" on=on pictureUrl="../../../../assets/images/rocket-outline.svg">
     </ngx-status-card>
   </div>
 </div>
+
+  <ngx-investments></ngx-investments>
+
+
 <!--<div class="row">-->
-  <!--<div class="col-xxxl-3 col-md-6">-->
-    <!--<ngx-status-card title="Bruno" type="primary" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-solid-collection/60/Robots_-_Solid_-_036_-_Bot-64.png">-->
-    <!--</ngx-status-card>-->
-  <!--</div>-->
-
-  <!--<div class="col-xxxl-3 col-md-6">-->
-    <!--<ngx-status-card title="Geoffrey" type="info" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-solid-collection/60/Robots_-_Solid_-_026_-_Bot-64.png">-->
-    <!--</ngx-status-card>-->
-  <!--</div>-->
-
-  <!--<div class="col-xxxl-3 col-md-6">-->
-    <!--<ngx-status-card title="Dot" type="success" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-solid-collection/60/Robots_-_Solid_-_010_-_Bot-64.png">-->
-    <!--</ngx-status-card>-->
-  <!--</div>-->
-
-  <!--<div class="col-xxxl-3 col-md-6">-->
-    <!--<ngx-status-card title="Rocket" type="warning" pictureUrl="https://cdn4.iconfinder.com/data/icons/robots-solid-collection/60/Robots_-_Solid_-_018_-_Bot-64.png">-->
-    <!--</ngx-status-card>-->
-  <!--</div>-->
+<!--<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">-->
+<!--<ngx-temperature></ngx-temperature>-->
 <!--</div>-->
 
-<div class="row">
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
-    <ngx-temperature></ngx-temperature>
-  </div>
+<!--<div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">-->
+<!--<ngx-electricity></ngx-electricity>-->
+<!--</div>-->
+<!--</div>-->
 
-  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
-    <ngx-electricity></ngx-electricity>
-  </div>
-</div>
+<!--<div class="row">-->
+<!--<div class="col-xxxl-9 col-xl-12">-->
+<!--<ngx-rooms></ngx-rooms>-->
+<!--</div>-->
 
-<div class="row">
-  <div class="col-xxxl-9 col-xl-12">
-    <ngx-rooms></ngx-rooms>
-  </div>
+<!--<div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">-->
+<!--<ngx-contacts></ngx-contacts>-->
+<!--</div>-->
 
-  <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">
-    <ngx-contacts></ngx-contacts>
-  </div>
+<!--<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">-->
+<!--<ngx-solar [chartValue]="72"></ngx-solar>-->
 
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
-    <ngx-solar [chartValue]="72"></ngx-solar>
+<!--<ngx-kitten></ngx-kitten>-->
+<!--</div>-->
 
-    <ngx-kitten></ngx-kitten>
-  </div>
+<!--<div class="col-xxxl-3 col-xxl-4 col-md-5">-->
+<!--<ngx-traffic></ngx-traffic>-->
+<!--<ngx-weather></ngx-weather>-->
+<!--</div>-->
 
-  <div class="col-xxxl-3 col-xxl-4 col-md-5">
-    <ngx-traffic></ngx-traffic>
-    <ngx-weather></ngx-weather>
-  </div>
-
-  <div class="col-xxxl-6 col-xxl-12 col-md-7">
-    <ngx-security-cameras></ngx-security-cameras>
-  </div>
-</div>
+<!--<div class="col-xxxl-6 col-xxl-12 col-md-7">-->
+<!--<ngx-security-cameras></ngx-security-cameras>-->
+<!--</div>-->
+<!--</div>-->
