--- a/src/app/pages/bots/geoffrey/geoffrey.component.html
+++ b/src/app/pages/bots/geoffrey/geoffrey.component.html
@@ -1,9 +1,14 @@
-<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
-  <ngx-bot-profile
-    title="Geoffrey"
-    subtitle="Safety"
-    type="info"
-    pictureUrl="../../../../assets/images/geoffrey-flat.svg"
-    description="Prevents investments from losing."
-  ></ngx-bot-profile>
+<div class="row">
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+    <ngx-bot-profile
+      title="Geoffrey"
+      subtitle="Safety"
+      type="info"
+      pictureUrl="../../../../assets/images/geoffrey-flat.svg"
+      description="Prevents investments from losing."
+    ></ngx-bot-profile>
+  </div>
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+    <ngx-stop-loss></ngx-stop-loss>
+  </div>
 </div>
