Populate investments table.

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -18,9 +18,8 @@
     <ngx-status-card title="Rocket" type="warning" on=on pictureUrl="../../../../assets/images/rocket-outline.svg">
     </ngx-status-card>
   </div>
-</div>
 
-  <ngx-investments></ngx-investments>
+  <ngx-investments [user]="user"></ngx-investments>
 
 
 <!--<div class="row">-->
