--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,26 +1,30 @@
 <div class="row">
-  <div class="col-xxxl-3 col-md-6">
+  <div class="col-xxl-3 col-md-6">
     <ngx-status-card title="Bruno" type="primary" on=on pictureUrl="../../../../assets/images/bruno-outline.svg">
     </ngx-status-card>
   </div>
 
-  <div class="col-xxxl-3 col-md-6">
+  <div class="col-xxl-3 col-md-6">
     <ngx-status-card title="Geoffrey" type="info" on=on pictureUrl="../../../../assets/images/geoffrey-outline.svg">
     </ngx-status-card>
   </div>
 
-  <div class="col-xxxl-3 col-md-6">
+  <div class="col-xxl-3 col-md-6">
     <ngx-status-card title="Dot" type="success" pictureUrl="../../../../assets/images/dot-outline.svg">
     </ngx-status-card>
   </div>
 
-  <div class="col-xxxl-3 col-md-6">
+  <div class="col-xxl-3 col-md-6">
     <ngx-status-card title="Rocket" type="warning" on=on pictureUrl="../../../../assets/images/rocket-outline.svg">
     </ngx-status-card>
   </div>
+</div>
 
-  <ngx-investments [user]="user"></ngx-investments>
-
+<div class="row">
+  <div class="col-sm-12">
+    <ngx-investments [user]="user" ></ngx-investments>
+  </div>
+</div>
 
 <!--<div class="row">-->
 <!--<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">-->
