Added search for stock.

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -22,7 +22,13 @@
 
 <div class="row">
   <div class="col-sm-12">
-    <ngx-investments [user]="user" ></ngx-investments>
+    <ngx-investments [user]="user"></ngx-investments>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <search></search>
   </div>
 </div>
 
