--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -26,11 +26,11 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-6">
-    <search></search>
-  </div>
-</div>
+<!--<div class="row">-->
+  <!--<div class="col-md-6">-->
+    <!--<search></search>-->
+  <!--</div>-->
+<!--</div>-->
 
 <!--<div class="row">-->
 <!--<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">-->
