--- a/src/app/pages/stock/search/search.component.html
+++ b/src/app/pages/stock/search/search.component.html
@@ -18,7 +18,7 @@
              autocorrect="off"
              autocomplete="off"
              typeahead
-             [(ngModel)]="searchModel"
+             [(ngModel)]="model"
              [ngbTypeahead]="search"
              [resultTemplate]="rt"
              [inputFormatter]="formatter"
