--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="col-xxl-3 col-md-6">
-    <ngx-status-card title="Dot" type="success" pictureUrl="../../../../assets/images/dot-outline.svg">
+    <ngx-status-card title="Dot" type="success" on=on pictureUrl="../../../../assets/images/dot-outline.svg">
     </ngx-status-card>
   </div>
 
