--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -23,7 +23,8 @@
   </nb-action>
   <!--<nb-action class="control-item" icon="nb-person" *ngIf="!username" (click)="login()">login</nb-action>login-->
   <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
-   <nb-action class="control-item">
-    <nb-search type="rotate-layout" (click)="startSearch()"></nb-search>
-  </nb-action>
+  <nb-action class="control-item" icon="nb-search" (click)="search()"></nb-action>
+  <!--<nb-action class="control-item">-->
+    <!--<nb-search type="rotate-layout" (click)="startSearch()"></nb-search>-->
+  <!--</nb-action>-->
 </nb-actions>
