--- a/src/app/pages/stock/search/search.component.html
+++ b/src/app/pages/stock/search/search.component.html
@@ -79,14 +79,14 @@
               <label for="quantity" class="col-sm-3 form-control-label">Quantity</label>
               <div class="col-sm-9">
                 <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Quantity"
-                       [ngModel]="investmentOrderModel.quantity">
+                       [(ngModel)]="investmentOrderModel.quantity">
               </div>
             </div>
             <div class="form-group" *ngIf="!investmentOrderModel.brunoOn">
               <label for="bid" class="col-sm-3 form-control-label">Bid</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control" id="bid" name="bid" placeholder="Bid"
-                       [ngModel]="investmentOrderModel.bid">
+                       [(ngModel)]="investmentOrderModel.bid">
               </div>
             </div>
             </div>
@@ -107,7 +107,7 @@
               <label for="buyAt" class="col-sm-12 form-control-label">Buy At (or lower)</label>
               <div class="col-sm-12">
                 <input type="text" class="form-control" id="buyAt" name="buyAt" placeholder="Buy At Price"
-                       [ngModel]="investmentOrderModel.buyAt">
+                       [(ngModel)]="investmentOrderModel.buyAt">
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
               <label for="stopLossPercent" class="col-sm-12 form-control-label">Stop Loss % (below high)</label>
               <div class="col-sm-12">
                 <input type="text" class="form-control" id="stopLossPercent" name="stopLossPercent" placeholder="Stop Loss Below High"
-                       [ngModel]="investmentOrderModel.stopLossPercent">
+                       [(ngModel)]="investmentOrderModel.stopLossPercent">
               </div>
             </div>
           </div>
@@ -149,7 +149,7 @@
               <label for="sellAt" class="col-sm-12 form-control-label">Sell At (or higher)</label>
               <div class="col-sm-12">
                 <input type="text" class="form-control" id="sellAt" name="sellAt" placeholder="Sell At Price"
-                       [ngModel]="investmentOrderModel.sellAt">
+                       [(ngModel)]="investmentOrderModel.sellAt">
               </div>
             </div>
           </div>
