--- a/src/app/pages/stock/search/search.component.scss
+++ b/src/app/pages/stock/search/search.component.scss
@@ -15,10 +15,14 @@
       box-shadow: $bevel, $shadow;
     }
 
+    .stock-quote{
+      font-size:40px;
+    }
+
     .rocket-rating {
       position: absolute;
       right: 40px;
-      padding-top: 15px;
+      top: 40px;
       font-size: 50px;
     }
 
