--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -20,16 +20,26 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-sm-12">
-    <ngx-investments [user]="user"></ngx-investments>
-  </div>
-</div>
+<nb-card>
+  <nb-card-header>
+    About
+  </nb-card-header>
+  <nb-card-body>
+    FreeStock is a collection of bots that manage your Robinhood portfolio. Create strategies and let the bots do the work.
+  </nb-card-body>
+</nb-card>
+
 
 <!--<div class="row">-->
-  <!--<div class="col-md-6">-->
-    <!--<search></search>-->
+  <!--<div class="col-sm-12">-->
+    <!--<ngx-investments [user]="user"></ngx-investments>-->
   <!--</div>-->
+<!--</div>-->
+
+<!--<div class="row">-->
+<!--<div class="col-md-6">-->
+<!--<search></search>-->
+<!--</div>-->
 <!--</div>-->
 
 <!--<div class="row">-->
