Rocket bot description.

--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -5,7 +5,7 @@
       subtitle="Growth"
       type="warning"
       pictureUrl="../../../../assets/images/rocket-flat.svg"
-      description="Rocket identifies the rocket stocks; The stocks that go to the moooon! She'll even buy them for you before they take off... for a price. Only $7."
+      description="Rocket identifies the rocket stocks; The stocks that go to the moooon!"
     ></ngx-bot-profile>
   </div>
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
