Add rocket stocks createdAt.

--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -12,6 +12,8 @@
   <nb-card>
     <nb-card-header>
       Rocket Stocks
+      <hr>
+      <span style="font-size: smaller; font-weight: lighter;">{{createdAt}}</span>
     </nb-card-header>
 
     <nb-card-body>
