--- a/src/app/pages/bots/rocket/rocket.component.html
+++ b/src/app/pages/bots/rocket/rocket.component.html
@@ -8,12 +8,13 @@
       description="Rocket identifies the rocket stocks; The stocks that go to the moooon!"
     ></ngx-bot-profile>
   </div>
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+  <div class="col-md-6">
+  <!--<div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">-->
   <nb-card>
     <nb-card-header>
       Rocket Stocks
-      <hr>
-      <span style="font-size: smaller; font-weight: lighter;">{{createdAt}}</span>
+      <!--<hr>-->
+      <!--<span style="font-size: smaller; font-weight: lighter;">{{createdAt}}</span>-->
     </nb-card-header>
 
     <nb-card-body>
