Error handling when not logged in.

--- a/src/app/pages/stock/search/search.component.html
+++ b/src/app/pages/stock/search/search.component.html
@@ -77,7 +77,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="user">
   <div class="col-sm-12">
     <nb-card *ngIf="investmentOrderModel">
       <nb-card-header>Create Investment</nb-card-header>
